align add coin buttons correctly

--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -13,4 +13,19 @@
     list-style-type: number;
 }
 
+#search-results > li{
+    display: flex; 
+    span{
+        flex: 1;
+    }
+
+    button{ 
+        cursor: pointer;
+    }
+}
+
+#search-results > li:hover{
+    background-color: var(--gray-1);
+}
+
 
